--- a/Styles/main.css
+++ b/Styles/main.css
@@ -2,3 +2,38 @@
     padding: 0;
     margin: 0;
 }
+
+body {
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+}
+
+h1 {
+    text-align: center;
+    padding: 10px 0;
+    margin-bottom: 20px;
+    font-family: 'Pacifico', cursive;
+    background: #333;
+}
+
+h1 a {
+    color: #fff;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+main {
+    width: 700px;
+    margin: 0 auto;
+}
+
+.article {
+    padding: 10px 0;
+}
+
+.article__title {
+    padding-bottom: 5px;
+}
